# single-consumer-queue-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
single_consumer_queue/: queue.py
tests/: test_single_consumer_queue.py
